--- a/.github/ISSUE_TEMPLATE/03-issue-browsers.yml
+++ b/.github/ISSUE_TEMPLATE/03-issue-browsers.yml
@@ -1,7 +1,8 @@
 name: Bug for @puppeteer/browsers
 description: File a bug report specifically about the `@puppeteer/browsers` package.
 title: '[Bug]: '
-labels: [bug, '@puppeteer/browsers']
+labels: ['@puppeteer/browsers']
+type: 'Bug'
 body:
   - type: textarea
     id: summary
